--- a/index.html
+++ b/index.html
@@ -3,8 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <title>Reservia</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="header__wrapper">
+        <img src="img/Reservia.svg" alt="" />
+        <nav>
+          <ul>
+            <li><a href="">Accomodations</a></li>
+            <li><a href="">Activities</a></li>
+            <li><a href="">Sign Up</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+  </body>
 </html>
