Added some of the text after the header and finished styling the header

--- a/index.html
+++ b/index.html
@@ -17,12 +17,29 @@
         <img src="img/Reservia.svg" alt="" />
         <nav>
           <ul>
-            <li><a href="">Accomodations</a></li>
-            <li><a href="">Activities</a></li>
-            <li><a href="">Sign Up</a></li>
+            <li><a class="active" href="#blank">Accomodations</a></li>
+            <li><a class="activities-link" href="#blank">Activities</a></li>
+            <li><a class="signup-link" href="#blank">Sign Up</a></li>
           </ul>
         </nav>
       </div>
     </header>
+    <main>
+      <div class="main__wrapper">
+        <h3>Find a place for your dream vacation</h3>
+        <p>Downtown or in nature</p>
+
+        <div class="searchbar">
+          <i class="fas fa-map-marker-alt searchbar__icon"></i>
+          <input
+            type="text"
+            name="location"
+            class="searchbar__input"
+            placeholder="Marseille, France"
+          />
+          <button class="searchbar__button">Search</button>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
