Added the filters html markup and css styling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="./node_modules/@fortawesome/fontawesome-free/css/all.css"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <title>Reservia</title>
   </head>
@@ -38,6 +42,28 @@
             placeholder="Marseille, France"
           />
           <button class="searchbar__button">Search</button>
+        </div>
+
+        <div class="filters">
+          <h4>Filters</h4>
+          <div class="filters__wrapper">
+            <button class="filter">
+              <i class="fas fa-map-marked-alt filter__icon"></i>
+              <span class="filter__text">Low cost</span>
+            </button>
+            <button class="filter">
+              <i class="fas fa-map-marked-alt filter__icon"></i>
+              <span class="filter__text">Family-friendly</span>
+            </button>
+            <button class="filter">
+              <i class="fas fa-map-marked-alt filter__icon"></i>
+              <span class="filter__text">Romantic</span>
+            </button>
+            <button class="filter">
+              <i class="fas fa-map-marked-alt filter__icon"></i>
+              <span class="filter__text">Pets allowed</span>
+            </button>
+          </div>
         </div>
       </div>
     </main>
