Added all the styling for the desktop version of Accommodations and Popular section

--- a/index.html
+++ b/index.html
@@ -65,6 +65,269 @@
             </button>
           </div>
         </div>
+
+        <div class="main__grid">
+          <section class="main__accommodations">
+            <h3 class="accommodations__heading">Accommodations in Marseille</h3>
+            <div class="accommodations">
+              <article class="card">
+                <div class="card__img-container">
+                  <img src="./img/accomodation1.jpg" alt="" class="card__img" />
+                </div>
+                <div class="card__content">
+                  <h4 class="card__heading">Auberge la Cannebière</h4>
+                  <p class="card__text">
+                    Night starting at
+                    <strong class="card__price">25&euro;</strong>
+                  </p>
+                  <div class="card__stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fas--grey fa-star"></i>
+                  </div>
+                </div>
+              </article>
+              <article class="card">
+                <div class="card__img-container">
+                  <img src="./img/accomodation2.jpg" alt="" class="card__img" />
+                </div>
+                <div class="card__content">
+                  <h4 class="card__heading">Hôtel du port</h4>
+                  <p class="card__text">
+                    Night starting at
+                    <strong class="card__price">52&euro;</strong>
+                  </p>
+                  <div class="card__stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                  </div>
+                </div>
+              </article>
+              <article class="card">
+                <div class="card__img-container">
+                  <img src="./img/accomodation3.jpg" alt="" class="card__img" />
+                </div>
+                <div class="card__content">
+                  <h4 class="card__heading">Les mouettes Hotel</h4>
+                  <p class="card__text">
+                    Night starting at
+                    <strong class="card__price">76&euro;</strong>
+                  </p>
+                  <div class="card__stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fas--grey fa-star"></i>
+                  </div>
+                </div>
+              </article>
+              <article class="card">
+                <div class="card__img-container">
+                  <img src="./img/accomodation4.jpg" alt="" class="card__img" />
+                </div>
+                <div class="card__content">
+                  <h4 class="card__heading">Hôtel de la mer</h4>
+                  <p class="card__text">
+                    Night starting at
+                    <strong class="card__price">46&euro;</strong>
+                  </p>
+                  <div class="card__stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fas--grey fa-star"></i>
+                    <i class="fas fas--grey fa-star"></i>
+                  </div>
+                </div>
+              </article>
+              <article class="card">
+                <div class="card__img-container">
+                  <img src="./img/accomodation5.jpg" alt="" class="card__img" />
+                </div>
+                <div class="card__content">
+                  <h4 class="card__heading">Auberge Le Panier</h4>
+                  <p class="card__text">
+                    Night starting at
+                    <strong class="card__price">23&euro;</strong>
+                  </p>
+                  <div class="card__stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fas--grey fa-star"></i>
+                  </div>
+                </div>
+              </article>
+              <article class="card">
+                <div class="card__img-container">
+                  <img src="./img/accomodation6.jpg" alt="" class="card__img" />
+                </div>
+                <div class="card__content">
+                  <h4 class="card__heading">Hôtel chez Amina</h4>
+                  <p class="card__text">
+                    Night starting at
+                    <strong class="card__price">96&euro;</strong>
+                  </p>
+                  <div class="card__stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                  </div>
+                </div>
+              </article>
+            </div>
+            <h4 class="accommodations__showmore">Show more</h4>
+          </section>
+          <section class="main__popular">
+            <h3 class="popular__heading">Most Popular</h3>
+            <div class="popular">
+              <article class="card card--popular">
+                <div class="card__img-container">
+                  <img src="./img/accomodation7.jpg" alt="" class="card__img" />
+                </div>
+                <div class="card__content">
+                  <h4 class="card__heading">Morning Sun Hotel</h4>
+                  <p class="card__text">
+                    Night starting at
+                    <strong class="card__price">128&euro;</strong>
+                  </p>
+                  <div class="card__stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                  </div>
+                </div>
+              </article>
+              <article class="card card--popular">
+                <div class="card__img-container">
+                  <img src="./img/accomodation8.jpg" alt="" class="card__img" />
+                </div>
+                <div class="card__content">
+                  <h4 class="card__heading">
+                    Au coeur de l'eau Bed and Breakfast
+                  </h4>
+                  <p class="card__text">
+                    Night starting at
+                    <strong class="card__price">71&euro;</strong>
+                  </p>
+                  <div class="card__stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fas--grey fa-star"></i>
+                  </div>
+                </div>
+              </article>
+              <article class="card card--popular">
+                <div class="card__img-container">
+                  <img
+                    src="./img/accomodation9.jpg"
+                    alt=""
+                    class="card__img card__img--vertical"
+                  />
+                </div>
+                <div class="card__content">
+                  <h4 class="card__heading">Tout blue et Blanc</h4>
+                  <p class="card__text">
+                    Night starting at
+                    <strong class="card__price">68&euro;</strong>
+                  </p>
+                  <div class="card__stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fas--grey fa-star"></i>
+                  </div>
+                </div>
+              </article>
+            </div>
+          </section>
+
+          <section class="main__activities">
+            <h4>Activities in Marseille</h4>
+            <div class="activities">
+              <article class="activity">
+                <div class="activitity__img-container">
+                  <img
+                    src="
+                  "
+                    alt=""
+                    class="activitity__img"
+                  />
+                </div>
+                <h4 class="activity__title">Old port</h4>
+              </article>
+              <article class="activity">
+                <div class="activitity__img-container">
+                  <img
+                    src="
+                  "
+                    alt=""
+                    class="activitity__img"
+                  />
+                </div>
+                <h4 class="activity__title">Old port</h4>
+              </article>
+              <article class="activity">
+                <div class="activitity__img-container">
+                  <img
+                    src="
+                  "
+                    alt=""
+                    class="activitity__img"
+                  />
+                </div>
+                <h4 class="activity__title">Old port</h4>
+              </article>
+              <article class="activity">
+                <div class="activitity__img-container">
+                  <img
+                    src="
+                  "
+                    alt=""
+                    class="activitity__img"
+                  />
+                </div>
+                <h4 class="activity__title">Old port</h4>
+              </article>
+              <article class="activity">
+                <div class="activitity__img-container">
+                  <img
+                    src="
+                  "
+                    alt=""
+                    class="activitity__img"
+                  />
+                </div>
+                <h4 class="activity__title">Old port</h4>
+              </article>
+              <article class="activity">
+                <div class="activitity__img-container">
+                  <img
+                    src="
+                  "
+                    alt=""
+                    class="activitity__img"
+                  />
+                </div>
+                <h4 class="activity__title">Old port</h4>
+              </article>
+            </div>
+          </section>
+        </div>
       </div>
     </main>
   </body>
