Added the finishing CSS and HTML fot the activities section for desktop

--- a/index.html
+++ b/index.html
@@ -257,73 +257,77 @@
           </section>
 
           <section class="main__activities">
-            <h4>Activities in Marseille</h4>
+            <h3 class="activities__heading">Activities in Marseille</h3>
             <div class="activities">
-              <article class="activity">
-                <div class="activitity__img-container">
+              <article class="activity activity__1">
+                <div
+                  class="activity__img-container activity__img-container--vertical"
+                >
                   <img
-                    src="
+                    src="./img/img1.jpg
                   "
                     alt=""
-                    class="activitity__img"
+                    class="activity__img activity__img--vertical"
                   />
                 </div>
                 <h4 class="activity__title">Old port</h4>
               </article>
-              <article class="activity">
-                <div class="activitity__img-container">
+              <article class="activity activity__2">
+                <div class="activity__img-container">
                   <img
-                    src="
+                    src="./img/img2.jpg
                   "
                     alt=""
-                    class="activitity__img"
+                    class="activity__img"
                   />
                 </div>
-                <h4 class="activity__title">Old port</h4>
+                <h4 class="activity__title">Pomègues Fort</h4>
               </article>
-              <article class="activity">
-                <div class="activitity__img-container">
+              <article class="activity activity__3">
+                <div
+                  class="activity__img-container activity__img-container--vertical"
+                >
                   <img
-                    src="
+                    src="./img/img3.jpg
                   "
                     alt=""
-                    class="activitity__img"
+                    class="activity__img activity__img--vertical"
                   />
                 </div>
-                <h4 class="activity__title">Old port</h4>
+                <h4 class="activity__title">Calanques National Park</h4>
               </article>
-              <article class="activity">
-                <div class="activitity__img-container">
+              <article class="activity activity__4">
+                <div class="activity__img-container">
                   <img
-                    src="
+                    src="./img/img4.jpg
                   "
                     alt=""
-                    class="activitity__img"
+                    class="activity__img"
                   />
                 </div>
-                <h4 class="activity__title">Old port</h4>
+                <h4 class="activity__title">Notre-Dame-de-la-Garde</h4>
               </article>
-              <article class="activity">
-                <div class="activitity__img-container">
+              <article class="activity activity__5">
+                <div class="activity__img-container">
                   <img
-                    src="
+                    src="./img/img5.jpg
                   "
                     alt=""
-                    class="activitity__img"
+                    class="activity__img"
                   />
                 </div>
-                <h4 class="activity__title">Old port</h4>
+                <h4 class="activity__title">Frioul Island</h4>
               </article>
-              <article class="activity">
-                <div class="activitity__img-container">
+              <article class="activity activity__6">
+                <div class="activity__img-container">
                   <img
-                    src="
+                    src="./img/img6.jpg
                   "
                     alt=""
-                    class="activitity__img"
+                    class="activity__img"
                   />
                 </div>
-                <h4 class="activity__title">Old port</h4>
+                <h4 class="activity__title">Longchamp Park</h4>
               </article>
             </div>
           </section>
