Added the footer for desktop display and the disclaimer half way on the page, also corrected some small CSS issues

--- a/index.html
+++ b/index.html
@@ -52,18 +52,26 @@
               <span class="filter__text">Low cost</span>
             </button>
             <button class="filter">
-              <i class="fas fa-map-marked-alt filter__icon"></i>
+              <i class="fas fa-child filter__icon"></i>
               <span class="filter__text">Family-friendly</span>
             </button>
             <button class="filter">
-              <i class="fas fa-map-marked-alt filter__icon"></i>
+              <i class="fas fa-heart filter__icon"></i>
               <span class="filter__text">Romantic</span>
             </button>
             <button class="filter">
-              <i class="fas fa-map-marked-alt filter__icon"></i>
+              <i class="fas fa-dog filter__icon"></i>
               <span class="filter__text">Pets allowed</span>
             </button>
           </div>
+        </div>
+
+        <div class="disclaimer">
+          <i class="fas fa-info disclaimer__icon"></i>
+          <p class="disclaimer__text">
+            More than 500 accommodations are available in this<br />
+            city
+          </p>
         </div>
 
         <div class="main__grid">
@@ -71,6 +79,7 @@
             <h3 class="accommodations__heading">Accommodations in Marseille</h3>
             <div class="accommodations">
               <article class="card">
+                <a class="card__link" href="#blank"></a>
                 <div class="card__img-container">
                   <img src="./img/accomodation1.jpg" alt="" class="card__img" />
                 </div>
@@ -90,6 +99,7 @@
                 </div>
               </article>
               <article class="card">
+                <a class="card__link" href="#blank"></a>
                 <div class="card__img-container">
                   <img src="./img/accomodation2.jpg" alt="" class="card__img" />
                 </div>
@@ -109,6 +119,7 @@
                 </div>
               </article>
               <article class="card">
+                <a class="card__link" href="#blank"></a>
                 <div class="card__img-container">
                   <img src="./img/accomodation3.jpg" alt="" class="card__img" />
                 </div>
@@ -128,6 +139,7 @@
                 </div>
               </article>
               <article class="card">
+                <a class="card__link" href="#blank"></a>
                 <div class="card__img-container">
                   <img src="./img/accomodation4.jpg" alt="" class="card__img" />
                 </div>
@@ -147,6 +159,7 @@
                 </div>
               </article>
               <article class="card">
+                <a class="card__link" href="#blank"></a>
                 <div class="card__img-container">
                   <img src="./img/accomodation5.jpg" alt="" class="card__img" />
                 </div>
@@ -166,6 +179,7 @@
                 </div>
               </article>
               <article class="card">
+                <a class="card__link" href="#blank"></a>
                 <div class="card__img-container">
                   <img src="./img/accomodation6.jpg" alt="" class="card__img" />
                 </div>
@@ -188,9 +202,13 @@
             <h4 class="accommodations__showmore">Show more</h4>
           </section>
           <section class="main__popular">
-            <h3 class="popular__heading">Most Popular</h3>
+            <header class="popular__header">
+              <h3 class="popular__heading">Most Popular</h3>
+              <i class="fas fa-chart-line popular__icon"></i>
+            </header>
             <div class="popular">
               <article class="card card--popular">
+                <a class="card__link" href="#blank"></a>
                 <div class="card__img-container">
                   <img src="./img/accomodation7.jpg" alt="" class="card__img" />
                 </div>
@@ -210,6 +228,7 @@
                 </div>
               </article>
               <article class="card card--popular">
+                <a class="card__link" href="#blank"></a>
                 <div class="card__img-container">
                   <img src="./img/accomodation8.jpg" alt="" class="card__img" />
                 </div>
@@ -231,6 +250,7 @@
                 </div>
               </article>
               <article class="card card--popular">
+                <a class="card__link" href="#blank"></a>
                 <div class="card__img-container">
                   <img
                     src="./img/accomodation9.jpg"
@@ -260,6 +280,7 @@
             <h3 class="activities__heading">Activities in Marseille</h3>
             <div class="activities">
               <article class="activity activity__1">
+                <a class="card__link" href="#blank"></a>
                 <div
                   class="activity__img-container activity__img-container--vertical"
                 >
@@ -273,6 +294,7 @@
                 <h4 class="activity__title">Old port</h4>
               </article>
               <article class="activity activity__2">
+                <a class="card__link" href="#blank"></a>
                 <div class="activity__img-container">
                   <img
                     src="./img/img2.jpg
@@ -284,6 +306,7 @@
                 <h4 class="activity__title">Pomègues Fort</h4>
               </article>
               <article class="activity activity__3">
+                <a class="card__link" href="#blank"></a>
                 <div
                   class="activity__img-container activity__img-container--vertical"
                 >
@@ -297,6 +320,7 @@
                 <h4 class="activity__title">Calanques National Park</h4>
               </article>
               <article class="activity activity__4">
+                <a class="card__link" href="#blank"></a>
                 <div class="activity__img-container">
                   <img
                     src="./img/img4.jpg
@@ -308,6 +332,7 @@
                 <h4 class="activity__title">Notre-Dame-de-la-Garde</h4>
               </article>
               <article class="activity activity__5">
+                <a class="card__link" href="#blank"></a>
                 <div class="activity__img-container">
                   <img
                     src="./img/img5.jpg
@@ -319,6 +344,7 @@
                 <h4 class="activity__title">Frioul Island</h4>
               </article>
               <article class="activity activity__6">
+                <a class="card__link" href="#blank"></a>
                 <div class="activity__img-container">
                   <img
                     src="./img/img6.jpg
@@ -332,6 +358,32 @@
             </div>
           </section>
         </div>
+      </div>
+      <div class="footer__wrapper">
+        <footer>
+          <div class="footer__section">
+            <h5 class="footer__heading">About</h5>
+            <ul class="footer__list">
+              <li><a href="">Site Map</a></li>
+              <li><a href="">General Terms and Conditions</a></li>
+              <li><a href="">Data and Privacy</a></li>
+            </ul>
+          </div>
+          <div class="footer__section">
+            <h5 class="footer__heading">Our Accommodations</h5>
+            <ul class="footer__list">
+              <li><a href="">Quality Assessment</a></li>
+              <li><a href="">You have a hotel?</a></li>
+            </ul>
+          </div>
+          <div class="footer__section">
+            <h5 class="footer__heading">Assistance</h5>
+            <ul class="footer__list">
+              <li><a href="">Help Desk</a></li>
+              <li><a href="">Contact Us</a></li>
+            </ul>
+          </div>
+        </footer>
       </div>
     </main>
   </body>
